--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -288,9 +288,117 @@
   margin-left: 5px;
 }
 
+.scroll-modal {
+  overflow-y: auto;
+}
 
-.scroll-modal{
-  overflow-y:auto;
+#menuToggle {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  /* top: 10px; */
+  left: 5px;
+  z-index: 1; /* 1 */
+  -webkit-user-select: none;
+  user-select: none;
+  background-color: #3a2f2d;
+}
+
+#menuToggle input {
+  display: flex;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+}
+
+#menuToggle span {
+  display: flex;
+  width: 20px;
+  height: 2px;
+  margin-bottom: 3px;
+  position: relative;
+  background: #ffffff;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 5px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-3px, -1px);
+  background: #36383f;
+}
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu {
+  position: absolute;
+  /* width: 180px; */
+  /* height: 400px; */
+  box-shadow: 0 0 10px #85888c;
+  margin: 0 -50px -50px 0;
+  padding: 50px;
+  padding-top: 125px;
+  background-color: #f5f6fa;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: scale(0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+  height: 80vh;
+  width: 100vw;
+
+  /* 
+
+
+    From Up To Down 
+    margin: 0 -50px -50px 0;
+    transform: translate(0, 100%);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    height: 80vh;
+    width: 100vw;
+
+    From Up To Down 
+    margin: 0 -50px -50px 0;
+    transform: translate(0, -100%);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    height: 80vh;
+    width: 100vw;
+
+    From Left To Right
+    margin: -50px 0 0 -50px;
+    transform: translate(-100%, 0);
+    height: 120vh;
+    width: 80vw; 
+  */
+}
+
+#menu li {
+  padding: 10px 0;
+  transition-delay: 2s;
+}
+
+#menuToggle input:checked ~ ul {
+  transform: scale(0);
+  transform: none;
 }
 
 @media (max-width: 1600px) {
