--- a/frontend/src/screens/SearchScreen/searchScreenStyles.css
+++ b/frontend/src/screens/SearchScreen/searchScreenStyles.css
@@ -1,43 +1,43 @@
-.search-fixed{
-    /* position: fixed;
+.search-fixed {
+  /* position: fixed;
     top: 100px;
     z-index: 4; */
-    width:100%
+  width: 100%;
 }
 
 .form {
-    position: relative;
-    margin: 10px;
+  position: relative;
+  margin: 10px;
 }
 
 .form .right-pan {
-    position: absolute;
-    top: 5px;
-    left: 15px;
-    width: 20px
+  position: absolute;
+  top: 5px;
+  left: 15px;
+  width: 20px;
 }
 
 .form span {
-    position: absolute;
-    right: 17px;
-    top: 5px;
-    padding: 2px;
+  position: absolute;
+  right: 17px;
+  top: 5px;
+  padding: 2px;
 }
 
 .left-pan {
-    padding-left: 10px !important;
-    border-left: 1px solid #d1d5db;
+  padding-left: 10px !important;
+  border-left: 1px solid #d1d5db;
 }
 
 .left-pan i {
-    padding-left: 10px
+  padding-left: 10px;
 }
 
 .form-input {
-    height: 40px;
-    text-indent: 30px;
-    z-index: 20;
-    /* border-radius: 10px */
+  height: 40px;
+  text-indent: 30px;
+  z-index: 20;
+  /* border-radius: 10px */
 }
 
 /* .form-input:focus {
@@ -45,30 +45,65 @@
     border: none
 } */
 
-.search-result-wraper{
-    margin-top: 10px; /*95*/
-    width:100vw;
-    display: flex;
-    justify-content: center;
-    padding: 10px;
+.search-result-wraper {
+  margin-top: 10px; /*95*/
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
 }
 
-.search-result-body{
-    max-width: 1050px;
+.search-result-body {
+  max-width: 1050px;
 }
 
-.search-product-wraper{
-    max-height: 250px;
-    max-width: 250px;
-    background-color: #6B584C;
-    margin-bottom: 20px !important;
+.search-product-wraper {
+  max-height: 250px;
+  max-width: 250px;
+  background-color: #6b584c;
+  margin-bottom: 20px !important;
 }
 
-.search-product-wraper .product-title{
-    font-size: 15px;
-    white-space: nowrap;
-    overflow:hidden;
-    text-overflow:ellipsis;
-    text-transform: uppercase;
+.search-product-wraper .product-title {
+  font-size: 15px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
 }
 
+.search-screen__filter-open {
+  position: absolute;
+  padding: 5px;
+  background-color: #fefaef;
+  border: 1px solid #6b584c4d;
+  z-index: 1080;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-screen__form-check {
+  display: none;
+}
+
+.search-screen__form-check-visible {
+  display: block;
+}
+
+.search-screen__filter-open.lni-chevron-right {
+  font-size: 30px;
+}
+
+@media only screen and (max-width: 500px) {
+  .search-screen__filter-open {
+    position: absolute;
+    top: 115px;
+  }
+
+  .search-screen__filter-open.lni-chevron-right {
+    font-size: 25px;
+  }
+}
