--- a/frontend/src/components/ProductDetails/ProductDetails.css
+++ b/frontend/src/components/ProductDetails/ProductDetails.css
@@ -1,3 +1,26 @@
+.similar-products-comp-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.similar-products-comp-wrapper .product-item-card {
+  flex-basis: 19%;
+  min-width: 80px;
+  margin: 0;
+}
+
+.similar-products-comp-wrapper
+  .product-item-card
+  .product-item-card-title-wrapper {
+  height: 45px;
+}
+
+.maginfier-shimmer {
+  offset: 0.7;
+  animation: maginfier-shimmer-anime 1s linear infinite alternate;
+}
+
 .Toastify__toast--default {
   background-color: #977257;
   color: #ffffff;
@@ -493,6 +516,16 @@
   padding-bottom: 20px;
 }
 
+@keyframes maginfier-shimmer-anime {
+  0% {
+    background-color: hsla(200, 14%, 75%, 0.705);
+  }
+
+  100% {
+    background-color: hsl(200, 20%, 95%);
+  }
+}
+
 /* -----------------------------------------LAPTOP  UPTO 1440PX------------------------------------------- */
 @media (max-width: 1290px) {
   .products-details-label {
@@ -735,6 +768,14 @@
 /* ----------------------------------------TAB 768px and below ---------------------------------------------- */
 
 @media (max-width: 768px) {
+  .similar-products-comp-wrapper .product-item-card {
+    flex-basis: 24%;
+  }
+
+  .similar-products-comp-wrapper .product-item-card:first-child {
+    margin-bottom: 10px;
+  }
+
   .similar-products-container {
     display: inline-flex;
     flex-basis: 25%;
@@ -967,6 +1008,20 @@
 /* ----------------------------------------mobile 425px and below ---------------------------------------------- */
 
 @media (max-width: 425px) {
+  .similar-products-comp-wrapper .product-item-card {
+    flex-basis: 48%;
+  }
+
+  .similar-products-comp-wrapper .product-item-card:nth-child(3) {
+    margin-bottom: 10px;
+  }
+
+  .similar-products-comp-wrapper
+    .product-item-card
+    .product-item-card-price-wrapper-MOB {
+    font-size: 12px;
+  }
+
   .product-details-wrapper {
     margin-bottom: 0px;
   }
