--- a/frontend/src/screens/HomeScreenHome/NewHomeScreenHomeStyle.css
+++ b/frontend/src/screens/HomeScreenHome/NewHomeScreenHomeStyle.css
@@ -1,22 +1,40 @@
+.home-products-main-img-shimmer {
+  offset: 0.5;
+  animation: skeleton-loading 1s linear infinite alternate;
+  /* width: 40vw !important; */
+  margin-right: 10px !important;
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsla(202, 11%, 86%, 0.801);
+  }
+
+  100% {
+    background-color: hsl(200, 20%, 95%);
+  }
+}
+
 .home-bags-comp-main-content-wrapper {
   display: flex;
 }
 
 .home-flex-img-wrapper {
-  width: 40vw;
+  width: 37vw; /* 40vw */
   /* height: 76vh; */
-  margin-right: 10px;
+  margin-right: 20px;
 }
 
 .home-bags-comp {
   display: flex;
   justify-content: space-between;
+  gap: 10px;
   flex-wrap: wrap;
 }
 
 .home-bags-comp .product-item-card {
-  flex-basis: 32%;
-  height: 48.5%;
+  flex-basis: 31%; /* 32 */
+  height: 48%; /* 48.5 */
   margin: 0;
   /* min-width: 80px; */
 }
@@ -31,7 +49,7 @@
   text-align: right;
   font-size: 82px;
   letter-spacing: 13px;
-  margin-top: 60px;
+  margin-top: 100px;
 }
 
 .home-header-comp {
@@ -81,6 +99,16 @@
   .home-bags-comp-main-content-wrapper img {
     display: none;
   }
+
+  .home-bags-comp .shimmer-img-size {
+    height: 235px !important;
+    width: 239px !important;
+  }
+
+  .home-bags-comp .shimmer-text-size {
+    height: 48px !important;
+    width: 239px !important;
+  }
   /* .home-bags-comp .product-item-card {
     flex-basis: 19%;
     height: 48.5%;
@@ -89,6 +117,16 @@
 
 /* MOB SCREEN STARTS */
 @media (max-width: 430px) {
+  .home-bags-comp .shimmer-img-size {
+    height: 182px !important;
+    width: 182px !important;
+  }
+
+  .home-bags-comp .shimmer-text-size {
+    height: 20px !important;
+    width: 132px !important;
+  }
+
   .home-bags-comp .product-item-card {
     flex-basis: 48%;
     font-size: 12px;
