--- a/frontend/src/screens/HomeScreenStorage/NewHomeScreenStorageStyle.css
+++ b/frontend/src/screens/HomeScreenStorage/NewHomeScreenStorageStyle.css
@@ -3,20 +3,21 @@
 }
 
 .storage-flex-img-wrapper {
-  width: 40vw;
+  width: 37vw;
   /* height: 76vh; */
-  margin-right: 10px;
+  margin-right: 20px;
 }
 
 .storage-bags-comp {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  gap: 10px;
 }
 
 .storage-bags-comp .product-item-card {
-  flex-basis: 32%;
-  height: 48.5%;
+  flex-basis: 31%;
+  height: 48%;
   margin: 0;
   /* min-width: 80px; */
 }
@@ -31,7 +32,7 @@
   text-align: left;
   font-size: 82px;
   letter-spacing: 13px;
-  margin-top: 60px;
+  margin-top: 100px;
 }
 
 .storage-header-comp {
@@ -81,6 +82,15 @@
   .storage-bags-comp-main-content-wrapper img {
     display: none;
   }
+  .storage-bags-comp .shimmer-img-size {
+    height: 235px !important;
+    width: 239px !important;
+  }
+
+  .storage-bags-comp .shimmer-text-size {
+    height: 48px !important;
+    width: 239px !important;
+  }
   /* .storage-bags-comp .product-item-card {
       flex-basis: 19%;
       height: 48.5%;
@@ -89,6 +99,16 @@
 
 /* MOB SCREEN STARTS */
 @media (max-width: 430px) {
+  .storage-bags-comp .shimmer-img-size {
+    height: 182px !important;
+    width: 182px !important;
+  }
+
+  .storage-bags-comp .shimmer-text-size {
+    height: 20px !important;
+    width: 132px !important;
+  }
+
   .storage-bags-comp .product-item-card {
     flex-basis: 48%;
     font-size: 12px;
