--- a/frontend/src/components/Shimmers/ProductItemCompStyle.css
+++ b/frontend/src/components/Shimmers/ProductItemCompStyle.css
@@ -115,6 +115,10 @@
   background-color: rgba(255, 255, 255, 0.616);
   font-family: 'rutan';
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .best-seller-comp {
@@ -139,7 +143,8 @@
   width: 100%;
   height: 15%;
   /* height: 40px; */
-  /* padding-top: 15px; */
+  padding-top: 5px;
+  padding-bottom: 5px;
   padding-left: 8px;
   padding-right: 2px;
   display: flex;
