--- a/frontend/src/screens/HomeScreenHome/NewHomeScreenHomeStyle.css
+++ b/frontend/src/screens/HomeScreenHome/NewHomeScreenHomeStyle.css
@@ -39,9 +39,9 @@
   /* min-width: 80px; */
 }
 
-/* .home-bags-comp .product-item-card:nth-child(n + 1):nth-child(-n + 3) {
+.home-bags-comp .product-item-card:nth-child(n + 1):nth-child(-n + 3) {
   margin-bottom: 15px;
-} */
+}
 
 .home-title-comp {
   font-family: 'rutanLight';
