--- a/frontend/src/screens/PostOrderScreen/postOrderScreenStyle.css
+++ b/frontend/src/screens/PostOrderScreen/postOrderScreenStyle.css
@@ -133,12 +133,34 @@
   text-align: center;
 }
 
-.reactions-container {
+.reactions-container-wrapper {
   margin-top: 15px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.reactions-container {
+  background-color: rgb(163, 129, 103);
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  color: rgb(255, 255, 255);
+  animation: reactionsContainerAnimation 0.6s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes reactionsContainerAnimation {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .rating-stars {
@@ -153,6 +175,19 @@
 .rating-stars img {
   /* flex-basis: 10%; */
   width: 20px;
+  transition: 0.2s ease-in-out;
+}
+
+.rating-stars img:hover {
+  transform: scale(1.3);
+  /* -webkit-box-shadow: 2px 2px 8px 0px rgba(163, 129, 103, 0.68);
+  -moz-box-shadow: 2px 2px 8px 0px rgba(163, 129, 103, 0.68);
+  box-shadow: 2px 2px 8px 0px rgba(163, 129, 103, 0.68); */
+}
+
+.rating-stars img:focus,
+.rating-stars img:active {
+  transform: scale(0.7);
 }
 
 .feedBackArea {
@@ -202,7 +237,13 @@
   transition: all 0.5s;
   height: 400px;
   width: 280px;
-  background-color: #977257dc;
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #977257e7;
+  color: #ffff;
 }
 
 #toggle:checked + .feedback-thanks-wrapper {
