--- a/frontend/src/screens/PostOrderScreen/postOrderScreenStyle.css
+++ b/frontend/src/screens/PostOrderScreen/postOrderScreenStyle.css
@@ -142,7 +142,7 @@
 }
 
 .reactions-container {
-  background-color: rgb(163, 129, 103);
+  /* background-color: rgb(163, 129, 103); */
   height: 50px;
   width: 50px;
   border-radius: 50%;
