--- a/frontend/src/screens/TestScreen/TestScreen.css
+++ b/frontend/src/screens/TestScreen/TestScreen.css
@@ -1,6 +1,29 @@
 .test__banner-image {
   position: relative;
+  background-image: url('./Desktop.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* background-size: 100% 100%; */
+  width: 100vw;
+  height: 85vh;
 }
+
+/* TAB */
+@media (max-width: 768px) {
+  .test__banner-image {
+    background-image: url('./Ipad.jpg');
+    background-size: cover;
+  }
+}
+
+/* MOBILE */
+@media (max-width: 440px) {
+  .test__banner-image {
+    background-image: url('./Mobile.jpg');
+    background-size: cover;
+  }
+}
+
 .test__banner-image img {
   width: 100%;
   height: 85vh;
