--- a/frontend/src/components/CarouselItemComp/carouselItemStyle.css
+++ b/frontend/src/components/CarouselItemComp/carouselItemStyle.css
@@ -1,6 +1,6 @@
 .entrance-title {
   position: absolute;
-  bottom: 12%;
+  bottom: 4%;
   /* left: 33%; */
   width: 100%;
   /* height: 200px; */
@@ -29,7 +29,7 @@
 
 .carousel-big-text {
   font-family: 'caudex';
-  color: #ffff;
+  color: #aa846f;
   line-height: 3.2rem;
   /* color: #e9b396; */
   font-size: 4rem;
@@ -37,7 +37,7 @@
 
 .carousel-sub-text {
   font-family: 'caudex';
-  color: #ffff;
+  color: #aa846f;
   line-height: 1.3rem;
   /* color: #56453b; */
   font-size: 1.3rem;
@@ -46,14 +46,26 @@
 .shop-all-carousel-btn {
   font-family: 'caudex';
   margin-top: 10px;
-  border: 1px solid #ffff;
+  border: 1px solid #aa846f;
   padding: 0.5rem 3rem;
   background-color: transparent;
-  color: #ffff;
+  color: #aa846f;
   transition: background-color 0.5s, color 0.5s;
 }
 
 .shop-all-carousel-btn:hover {
-  background-color: #ffff;
-  color: #aa846f;
+  background-color: #aa846f;
+  color: #ffff;
+}
+
+/* MOBILE */
+@media (max-width: 440px) {
+  .carousel-big-text {
+    font-size: 3rem;
+  }
+
+  .carousel-sub-text {
+    font-size: 1rem;
+  }
+  /* background-image: url('${props => props.urls[3]}'); */
 }
