--- a/frontend/src/components/Shimmers/ProductItemCompStyle.css
+++ b/frontend/src/components/Shimmers/ProductItemCompStyle.css
@@ -111,7 +111,7 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 25px;
+  height: 20px;
   background-color: rgba(255, 255, 255, 0.616);
   font-family: 'rutan';
   text-align: center;
@@ -134,7 +134,8 @@
   border-radius: 2px;
   padding-top: 1px;
   font-size: 14px;
-  padding: 3px 5px;
+  padding: 1px 1px;
+  font-size: 12px;
 }
 
 .product-item-card-title-wrapper {
