--- a/frontend/src/components/CustomModals/customModalStyles.css
+++ b/frontend/src/components/CustomModals/customModalStyles.css
@@ -273,12 +273,12 @@ li {
     width: 750px;
     height: 300px;
   } */
-  .input,
+  /* .input,
   input {
     width: calc(25vw);
   }
   h1 {
     color: #ff9d00;
     font-size: 250%;
-  }
+  } */
 }
