--- a/frontend/src/components/Journal/Journal.css
+++ b/frontend/src/components/Journal/Journal.css
@@ -74,10 +74,218 @@
 .jouranl-link {
   float: right;
 }
+/* 
+
+
+
+
+
+
+ */
+
+/*  
+.journals-whole-component-wrapper {
+  margin-block: 30px;
+  display: flex;
+  justify-content: center;
+}
+.journals-component-wrapper {
+  max-width: 1260px;
+  width: 80vw;
+}
+
+.journals-component-header-wrapper {
+  width: 100%;
+}
+
+.journals-body-component-wrapper {
+  display: flex;
+  justify-content: space-between;
+  gap: 8px;
+  row-gap: 15px;
+  flex-wrap: wrap;
+}
+
+.journal-card-cmp-wrapper {
+  --font-size: 13px;
+  flex-basis: 22%;
+  height: 100%;
+  overflow: hidden;
+  text-align: justify;
+  font-family: 'rutan';
+  cursor: pointer;
+}
+
+.journal-card-cmp-wrapper::after {
+  content: '';
+  display: inline-block;
+  height: 2px;
+  width: 100%;
+  background-color: #977257;
+  transition: transform 0.6s;
+  transform: scaleX(0) translateY(-10px);
+  transform-origin: left;
+}
+
+.journal-card-img-wrapper {
+  height: 60%;
+  width: 100%;
+  overflow: hidden;
+}
+.journal-card-img-wrapper > img {
+  object-position: center;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  transition: transform 0.9s;
+}
+
+.journal-card-cmp-wrapper:hover > .journal-card-img-wrapper > img {
+  transform: scale(1.1);
+}
+
+.journal-card-details-cmp {
+  height: 40%;
+  width: 100%;
+  background-color: chartreuse;
+}
+
+.journal-card-cmp-wrapper:hover::after {
+  transform: scaleX(100%) translateY(-10px);
+}
+
+.journal-card-date-read-mins-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-top: calc(var(--font-size) - 2px);
+  margin-bottom: calc(var(--font-size) - 5px);
+}
+
+.journal-card-date-read-mins-wrapper > p {
+  font-size: calc(var(--font-size) - 2px);
+  margin: 0;
+}
+
+.journal-card-details-cmp > p {
+  font-size: var(--font-size);
+  margin-bottom: calc(var(--font-size) - 5px);
+}
+
+.journal-card-cmp-wrapper > h6 {
+  font-family: 'rutanMedium';
+}
+
+.journal-card-details-cmp > h6 {
+  font-size: calc(var(--font-size) - 1px);
+  font-family: 'rutanMedium';
+  margin-bottom: 0;
+}
+
+.journal-card-details-cmp > h6::after {
+  content: '  \276F \276F';
+  display: inline-block;
+  -webkit-transform: translatex(3px);
+  transform: translatex(3px);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.journal-card-cmp-wrapper:hover h6:last-child::after {
+  -webkit-animation-name: read-more-anime;
+  animation-name: read-more-anime;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
+}
+
+@-webkit-keyframes read-more-anime {
+  16.65% {
+    -webkit-transform: translateX(8px);
+    transform: translateX(8px);
+  }
+
+  33.3% {
+    -webkit-transform: translateX(3px);
+    transform: translateX(3px);
+  }
+
+  49.95% {
+    -webkit-transform: translateX(6px);
+    transform: translateX(6px);
+  }
+
+  66.6% {
+    -webkit-transform: translateX(3px);
+    transform: translateX(3px);
+  }
+
+  83.25% {
+    -webkit-transform: translateX(6px);
+    transform: translateX(6px);
+  }
+
+  100% {
+    -webkit-transform: translateX(3px);
+    transform: translateX(3px);
+  }
+}
+
+@keyframes read-more-anime {
+  16.65% {
+    -webkit-transform: translateX(8px);
+    transform: translateX(8px);
+  }
+
+  33.3% {
+    -webkit-transform: translateX(3px);
+    transform: translateX(3px);
+  }
+
+  49.95% {
+    -webkit-transform: translateX(6px);
+    transform: translateX(6px);
+  }
+
+  66.6% {
+    -webkit-transform: translateX(3px);
+    transform: translateX(3px);
+  }
+
+  83.25% {
+    -webkit-transform: translateX(6px);
+    transform: translateX(6px);
+  }
+
+  100% {
+    -webkit-transform: translateX(3px);
+    transform: translateX(3px);
+  }
+}
+
+@media (max-width: 1290px) {
+  .journals-component-wrapper {
+    padding: 10px;
+    width: 90vw;
+  }
+}
+
+@media (max-width: 1200px) {
+  .journals-component-wrapper {
+    padding: 10px;
+    width: 100vw;
+  }
+
+  .journal-card-cmp-wrapper {
+    flex-basis: 30%;
+  }
+}
 
 @media (max-width: 450px) {
   .journal-card {
     width: 100%;
-    /* margin: 10px; */
   }
-}
+} */
