--- a/frontend/src/screens/JournalReaderScreen/JournalScreen.css
+++ b/frontend/src/screens/JournalReaderScreen/JournalScreen.css
@@ -22,7 +22,7 @@
 }
 
 .jone_main h2 {
-  font-family: 'rutan';
+  font-family: 'rutanLight';
   margin-bottom: 30px;
   color: #977257;
 }
@@ -56,6 +56,7 @@
 
 .jone_author-read {
   font-size: 12px;
+  font-family: 'rutanLight';
 }
 
 .jone_img {
@@ -91,6 +92,7 @@
 .jone_div-wrap p {
   font-size: 18px;
   word-spacing: 0.2px;
+  font-family: 'rutanLight';
 }
 
 /* .jone_div-wrap {
