--- a/frontend/src/components/Journal/Journal.css
+++ b/frontend/src/components/Journal/Journal.css
@@ -82,10 +82,9 @@
 
 
  */
-
-/*  
 .journals-whole-component-wrapper {
   margin-block: 30px;
+  /* width: 100vw; */
   display: flex;
   justify-content: center;
 }
@@ -100,15 +99,20 @@
 
 .journals-body-component-wrapper {
   display: flex;
-  justify-content: space-between;
-  gap: 8px;
+  /* justify-content: space-between; */
+  /* gap: 8px; */
+  justify-content: start;
+  gap: 20px;
   row-gap: 15px;
   flex-wrap: wrap;
 }
 
 .journal-card-cmp-wrapper {
   --font-size: 13px;
-  flex-basis: 22%;
+  /* border: 1px solid red; */
+  /* width: 300px; */
+  /* flex-basis: 22%; */
+  flex-basis: 30%;
   height: 100%;
   overflow: hidden;
   text-align: justify;
@@ -122,8 +126,8 @@
   height: 2px;
   width: 100%;
   background-color: #977257;
-  transition: transform 0.6s;
-  transform: scaleX(0) translateY(-10px);
+  transition: transform 2s;
+  transform: scaleX(0) translateY(-14px);
   transform-origin: left;
 }
 
@@ -137,7 +141,7 @@
   object-fit: cover;
   height: 100%;
   width: 100%;
-  transition: transform 0.9s;
+  transition: transform ease 2s;
 }
 
 .journal-card-cmp-wrapper:hover > .journal-card-img-wrapper > img {
@@ -151,14 +155,14 @@
 }
 
 .journal-card-cmp-wrapper:hover::after {
-  transform: scaleX(100%) translateY(-10px);
+  transform: scaleX(100%) translateY(-14px);
 }
 
 .journal-card-date-read-mins-wrapper {
   display: flex;
   justify-content: space-between;
   margin-top: calc(var(--font-size) - 2px);
-  margin-bottom: calc(var(--font-size) - 5px);
+  margin-bottom: calc(var(--font-size) - 8px);
 }
 
 .journal-card-date-read-mins-wrapper > p {
@@ -166,23 +170,46 @@
   margin: 0;
 }
 
-.journal-card-details-cmp > p {
-  font-size: var(--font-size);
-  margin-bottom: calc(var(--font-size) - 5px);
-}
-
 .journal-card-cmp-wrapper > h6 {
   font-family: 'rutanMedium';
+  font-size: calc(var(--font-size) + 1px);
+  line-height: calc(var(--font-size) + 5px);
+  height: calc((var(--font-size) * 2) + 9px);
+  text-align: left;
+  letter-spacing: calc(var(--font-size) - 12.5px);
+  word-spacing: calc(var(--font-size) - 10px);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  /* margin-bottom: calc(var(--font-size) - 5px); */
 }
 
-.journal-card-details-cmp > h6 {
+.journal-card-cmp-wrapper > p {
+  margin-bottom: calc(var(--font-size) - 3px);
+  font-size: var(--font-size);
+  line-height: calc(var(--font-size) + 6px);
+  height: calc((var(--font-size) * 3) + 14px);
+  letter-spacing: calc(var(--font-size) - 12.5px);
+  word-spacing: calc(var(--font-size) - 12px);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+.journal-card-cmp-wrapper h6:last-child {
   font-size: calc(var(--font-size) - 1px);
   font-family: 'rutanMedium';
+  line-height: calc(var(--font-size) + 2px);
+  height: calc(var(--font-size) + 2px);
   margin-bottom: 0;
 }
 
-.journal-card-details-cmp > h6::after {
-  content: '  \276F \276F';
+.journal-card-cmp-wrapper h6:last-child::after {
+  content: '\00a0 \276F \276F';
   display: inline-block;
   -webkit-transform: translatex(3px);
   transform: translatex(3px);
@@ -202,6 +229,7 @@
   animation-iteration-count: 1;
 }
 
+/* Wobble Horizontal */
 @-webkit-keyframes read-more-anime {
   16.65% {
     -webkit-transform: translateX(8px);
@@ -285,7 +313,17 @@
 }
 
 @media (max-width: 450px) {
+  .journals-body-component-wrapper {
+    gap: 8px;
+  }
+
   .journal-card {
     width: 100%;
+    /* margin: 10px; */
   }
-} */
+
+  .journal-card-cmp-wrapper {
+    /* --font-size: 13px; */
+    flex-basis: 48%;
+  }
+}
