blogs update, sitemap xml

--- a/frontend/src/components/Journal/Journal.css
+++ b/frontend/src/components/Journal/Journal.css
@@ -97,6 +97,11 @@
   width: 100%;
 }
 
+.journals-component-header-wrapper h3 {
+  font-family: 'rutanLight';
+  text-transform: uppercase;
+}
+
 .journals-body-component-wrapper {
   display: flex;
   /* justify-content: space-between; */
